Issue #17487: Add `Rewrite:UpgradeToJava21`